<resources>
    <string name="app_name">My Shopping List</string>
    <string name="fab_add_category">Add shopping list category</string>
    <string name="fab_add_category_item">Add category item</string>
    <string name="title_add_shopping_category">Add a new shopping category</string>
    <string name="title_edit_shopping_category">Edit shopping category</string>
    <string name="title_delete_shopping_category">Delete shopping category</string>
    <string name="title_delete_shopping_category_item">Delete shopping category item</string>
    <string name="text_delete_shopping_category">This action will delete the selected shopping category. Are you sure?</string>
    <string name="text_delete_shopping_category_item">This action will delete the selected shopping category item. Are you sure?</string>
    <string name="text_items_count">items: </string>
    <string name="hint_enter_category_name">enter category name</string>
    <string name="hint_enter_category_item_name">enter item name</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="desc_app_logo">Splash screen application logo</string>
    <string name="desc_edit_category">Edit category</string>
    <string name="desc_delete_category">Delete category</string>
    <string name="desc_edit_item">Edit Item</string>
    <string name="desc_delete_item">Delete Item</string>
</resources>