<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_categories"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_layout_margin"
    app:cardCornerRadius="@dimen/cardview_cardCornerRadius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Category name-->
        <TextView
            android:id="@+id/text_view_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_layout_margin"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/text_view_category_items_count"
            app:layout_constraintEnd_toStartOf="@+id/image_view_edit_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Category Name" />

        <!--Category items count-->
        <TextView
            android:id="@+id/text_view_category_items_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textview_layout_marginTop"
            android:layout_marginBottom="@dimen/textview_layout_marginBottom"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_view_category"
            app:layout_constraintStart_toStartOf="@+id/text_view_category"
            tools:text="items:" />

        <!--Edit category-->
        <ImageView
            android:id="@+id/image_view_edit_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/imageview_layout_margin"
            android:contentDescription="@string/desc_edit_category"
            android:src="@drawable/ic_edit_24"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_category"
            app:layout_constraintEnd_toStartOf="@+id/image_view_delete_category"
            app:layout_constraintTop_toTopOf="@+id/text_view_category" />

        <!--Delete category-->
        <ImageView
            android:id="@+id/image_view_delete_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/imageview_layout_margin"
            android:contentDescription="@string/desc_delete_category"
            android:src="@drawable/ic_delete_24"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>