<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WallpaperActivity">

    <!--Wallpaper image-->
    <ImageView
        android:id="@+id/image_view_wallpaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_wallpaper_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <!--Floating action button that opens menu-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginEnd="@dimen/fab_layout_margin"
        android:layout_marginBottom="@dimen/fab_layout_margin"
        android:contentDescription="@string/desc_fab_menu"
        android:src="@drawable/ic_menu_open_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>